tests/compile_fail/message_trait/engine/stop.rs
fn a(_: impl ruci::engine::traits::Message) {}
fn b(m: ruci::Stop) {
    a(m);
}

fn main() {}